# cv_2021

./: .gitignore  README.md
task2/: README.md  median_filter.ipynb
task2/CPP_MedianFilter/: CMakeLists.txt  build.sh  main.cpp
task2/CPP_MedianFilter/lib/: CMakeLists.txt  MedianFilter.cpp  MedianFilter.h
task2/CPP_MedianFilter/python_packges/: PyMedianFilter.cpp  PyMedianFilter.pyx  Rectangle.cpp  cypython_example_rectangle.pyx  requirements.txt  setup.py  test.py  test_MedianFilter.py
task3/: task3.ipynb
task6/: QrDetector.ipynb  README.md
